@@ -1,6 +1,7 @@
 
 v0.4.3:
- - Optimization: rename stat config option emit_duration to emit_interval
+ - Deprecated: the following config options are deprecated:
+     - emit_duration in statsd config, use emit_interval instead
 
 v0.4.2:
  - Feature: allow to read symlink files on local store dir
